--- a/templates/orders/order_list.html
+++ b/templates/orders/order_list.html
@@ -15,43 +15,50 @@
         </div>
     </header>
 
+
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+
     <div class="row">
         <div class="col">
-
-            <div class="card card-modern card-modern-table-over-header">
-                <div class="card-header">
+            <section class="card">
+                <header class="card-header">
                     <div class="card-actions">
                         <a href="#" class="card-action card-action-toggle" data-card-toggle></a>
+                        <a href="#" class="card-action card-action-dismiss" data-card-dismiss></a>
                     </div>
-                    <a type="button" href="#" class="btn btn-primary">Qo'shmoq</a>
-                </div>
+
+                    <h2 class="card-title">Buyurtmalar</h2>
+                </header>
                 <div class="card-body">
-                    <table class="table table-responsive-md table-bordered mb-0">
+
+                    <table class="table table-bordered table-striped mb-0" id="datatable-tabletools">
+
                         <thead>
                         <tr>
-                            <th>#</th>
+                           <th>#</th>
                             <th>Buyurtma raqami</th>
-
                             <th>Buyurtma statusi</th>
                             <th>Mijoz telefon raqami</th>
                             <th>To'lov statusi</th>
                             <th>Yetqazib berish turi</th>
-
                             <th>Sahifalar soni</th>
                             <th>Narx</th>
-                            <th>Yaratildi</th>
-                            <th>Vazifa</th>
+                            <th>Yaratilgan</th>
+
                         </tr>
                         </thead>
                         <tbody>
-                        {% for order in order_list %}
+                       {% for order in order_list %}
                             <tr>
-
-
                                 <td>{{ forloop.counter }}</td>
                                 <td><a href="{% url 'orders:order_detail' order.uuid %}">{{ order.order_number }}</a>
                                 </td>
-
                                 <td>
                                     {% if order.order_status == 2 %}
                                         <span class="badge badge-warning">{{ order.get_order_status_display }}</span>
@@ -67,36 +74,36 @@
                                 <td>{{ order.created_by.phone }}</td>
                                 <td>{{ order.get_cash_type_display }}</td>
                                 <td>{{ order.get_delivery_type_display }}</td>
-
                                 <td>{{ order.page_number }}</td>
                                 <td>{{ order.price|floatformat:"2g" }} so'm</td>
-                                <td>{{ order.created_at|date:"d-M-Y H:i" }}</td>
-                                <td>
-                                    <button class="btn btn-primary" type="submit">Saqlash</button>
-                                </td>
-                                {#                                <td class="actions text-center">#}
-                                {#                                    <a href="#"><i class="fas fa-pencil-alt"></i></a>#}
-                                {#                                    <a href="#" class="delete-row"><i#}
-                                {#                                            class="far fa-trash-alt"></i></a>#}
-                                {#                                </td>#}
+                                <td>{{ order.created_at|date:"d-m-Y H:i" }}</td>
 
                             </tr>
                         {% endfor %}
                         </tbody>
                     </table>
                 </div>
-
-            </div>
+            </section>
         </div>
     </div>
-    {% if messages %}
-        <ul class="messages">
-            {% for message in messages %}
-                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-            {% endfor %}
-        </ul>
-    {% endif %}
 
 {% endblock %}
 <!-- Specific Page Vendor -->
+{% block additional_js %}
+    <!-- Specific Page Vendor -->
+		<script src="{% static 'vendor/select2/js/select2.js' %}"></script>
+		<script src="{% static 'vendor/datatables/media/js/jquery.dataTables.min.js' %}"></script>
+		<script src="{% static 'vendor/datatables/media/js/dataTables.bootstrap5.min.js' %}"></script>
+		<script src="{% static 'vendor/datatables/extras/TableTools/Buttons-1.4.2/js/dataTables.buttons.min.js' %}"></script>
+		<script src="{% static 'vendor/datatables/extras/TableTools/Buttons-1.4.2/js/buttons.bootstrap4.min.js' %}"></script>
+		<script src="{% static 'vendor/datatables/extras/TableTools/Buttons-1.4.2/js/buttons.html5.min.js' %}"></script>
+		<script src="{% static 'vendor/datatables/extras/TableTools/Buttons-1.4.2/js/buttons.print.min.js' %}"></script>
+		<script src="{% static 'vendor/datatables/extras/TableTools/JSZip-2.5.0/jszip.min.js' %}"></script>
+		<script src="{% static 'vendor/datatables/extras/TableTools/pdfmake-0.1.32/pdfmake.min.js' %}"></script>
+		<script src="{% static 'vendor/datatables/extras/TableTools/pdfmake-0.1.32/vfs_fonts.js' %}"></script>
 
+    <!-- Examples -->
+		<script src="{% static 'js/examples/examples.datatables.default.js' %}"></script>
+		<script src="{% static 'js/examples/examples.datatables.row.with.details.js' %}"></script>
+		<script src="{% static 'js/examples/examples.datatables.tabletools.js' %}"></script>
+{% endblock %}
