added url for transactions

--- a/templates/_includes/sidebar.html
+++ b/templates/_includes/sidebar.html
@@ -41,7 +41,7 @@
                         </a>
                     </li>
                             <li>
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="{% url 'transactions:transaction_list' %}">
                             <i class="bx bx-money" aria-hidden="true"></i>
                             <span>Kassa</span>
                         </a>
