--- a/templates/transactions/transaction_list.html
+++ b/templates/transactions/transaction_list.html
@@ -1,10 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% load static %}
+
+{% block title %}Transaksiyalar{% endblock %}
+
+
+{% block content %}
+    <header class="page-header page-header-left-inline-breadcrumb">
+        <h2 class="font-weight-bold text-6">Dashboard ></h2>
+        <div class="right-wrapper">
+            <ol class="breadcrumbs">
+                <li><span>Transaksiyalar</span></li>
+            </ol>
+        </div>
+    </header>
+
+
+
+
+
+
+{% endblock %}
+<!-- Specific Page Vendor -->
+{% block additional_js %}
+
+{% endblock %}
