--- a/templates/transactions/transaction_list.html
+++ b/templates/transactions/transaction_list.html
@@ -29,7 +29,7 @@
                             <div class="summary">
                                 <h4 class="title">Balans</h4>
                                 <div class="info mt-4">
-                                    <strong class="amount">$ 14,890.30</strong>
+                                    <strong class="amount">{{ balance|floatformat:"g" }} so'm</strong>
                                 </div>
                             </div>
 
@@ -51,7 +51,7 @@
                             <div class="summary">
                                 <h4 class="title">Debet</h4>
                                 <div class="info mt-4">
-                                    <strong class="amount">$ 14,890.30</strong>
+                                    <strong class="amount">{{ total_debit|floatformat:"g" }} so'm</strong>
                                 </div>
                             </div>
 
@@ -73,7 +73,7 @@
                             <div class="summary">
                                 <h4 class="title">Kredit</h4>
                                 <div class="info mt-4">
-                                    <strong class="amount">$ 14,890.30</strong>
+                                    <strong class="amount">{{ total_credit|floatformat:"g" }} so'm</strong>
                                 </div>
                             </div>
 
@@ -153,11 +153,11 @@
                                 {% else %}
                                     <td class="text-center">0</td>
                                 {% endif %}
-                            {% if transaction.company_balance > 0 %}
-                                <td class="text-center text-success">{{ transaction.company_balance|floatformat:"2g" }}</td>
+                                {% if transaction.company_balance > 0 %}
+                                    <td class="text-center text-success">{{ transaction.company_balance|floatformat:"2g" }}</td>
                                 {% else %}
-                                <td class="text-center text-danger">{{ transaction.company_balance|floatformat:"2g" }}</td>
-                            {% endif %}
+                                    <td class="text-center text-danger">{{ transaction.company_balance|floatformat:"2g" }}</td>
+                                {% endif %}
                             </tr>
                         {% endfor %}
                         </tbody>
