--- a/templates/transactions/transaction_list.html
+++ b/templates/transactions/transaction_list.html
@@ -29,7 +29,7 @@
                             <div class="summary">
                                 <h4 class="title">Balans</h4>
                                 <div class="info mt-4">
-                                    <strong class="amount">{{ balance|floatformat:"g" }} so'm</strong>
+                                    <strong class="amount">{{ company.balance|floatformat:"g" }} so'm</strong>
                                 </div>
                             </div>
 
@@ -51,7 +51,7 @@
                             <div class="summary">
                                 <h4 class="title">Debet</h4>
                                 <div class="info mt-4">
-                                    <strong class="amount">{{ total_debit|floatformat:"g" }} so'm</strong>
+                                    <strong class="amount">{{ company.total_debit|floatformat:"g" }} so'm</strong>
                                 </div>
                             </div>
 
@@ -73,7 +73,7 @@
                             <div class="summary">
                                 <h4 class="title">Kredit</h4>
                                 <div class="info mt-4">
-                                    <strong class="amount">{{ total_credit|floatformat:"g" }} so'm</strong>
+                                    <strong class="amount">{{ company.total_credit|floatformat:"g" }} so'm</strong>
                                 </div>
                             </div>
 
