--- a/templates/_includes/sidebar.html
+++ b/templates/_includes/sidebar.html
@@ -2,20 +2,20 @@
 
 
 <!-- start: sidebar -->
-        <aside id="sidebar-left" class="sidebar-left">
+<aside id="sidebar-left" class="sidebar-left">
 
-            <div class="sidebar-header">
-                <div class="sidebar-toggle d-none d-md-flex" data-toggle-class="sidebar-left-collapsed"
-                     data-target="html" data-fire-event="sidebar-left-toggle">
-                    <i class="fas fa-bars" aria-label="Toggle sidebar"></i>
-                </div>
-            </div>
+    <div class="sidebar-header">
+        <div class="sidebar-toggle d-none d-md-flex" data-toggle-class="sidebar-left-collapsed"
+             data-target="html" data-fire-event="sidebar-left-toggle">
+            <i class="fas fa-bars" aria-label="Toggle sidebar"></i>
+        </div>
+    </div>
 
-            <div class="nano">
-                <div class="nano-content">
-                    <nav id="menu" class="nav-main" role="navigation">
+    <div class="nano">
+        <div class="nano-content">
+            <nav id="menu" class="nav-main" role="navigation">
 
-                        <ul class="nav nav-main">
+                <ul class="nav nav-main">
                     <li>
                         <a class="nav-link" href="{% url 'accounts:home' %}">
                             <i class="bx bx-home-alt" aria-hidden="true"></i>
@@ -40,33 +40,51 @@
                             <span>Mahsulotlar</span>
                         </a>
                     </li>
-                            <li>
-                        <a class="nav-link" href="{% url 'transactions:transaction_list' %}">
+                    <li class="nav-parent">
+                        <a class="nav-link" href="#">
                             <i class="bx bx-money" aria-hidden="true"></i>
                             <span>Kassa</span>
                         </a>
+                        <ul class="nav nav-children">
+                            <li>
+                                <a class="nav-link" href="{% url 'transactions:transaction_list' %}">
+                                    To'lov operatsiyalar
+                                </a>
+                            </li>
+                            <li>
+                                <a class="nav-link" href="#">
+                                    Debit-Credit
+                                </a>
+                            </li>
+                            <li>
+                                <a class="nav-link" href="#">
+                                    Vector
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
                     </li>
 
                 </ul>
-                    </nav>
+            </nav>
 
 
+        </div>
 
-                </div>
+        <script>
+            // Maintain Scroll Position
+            if (typeof localStorage !== 'undefined') {
+                if (localStorage.getItem('sidebar-left-position') !== null) {
+                    var initialPosition = localStorage.getItem('sidebar-left-position'),
+                        sidebarLeft = document.querySelector('#sidebar-left .nano-content');
 
-                <script>
-                    // Maintain Scroll Position
-                    if (typeof localStorage !== 'undefined') {
-                        if (localStorage.getItem('sidebar-left-position') !== null) {
-                            var initialPosition = localStorage.getItem('sidebar-left-position'),
-                                sidebarLeft = document.querySelector('#sidebar-left .nano-content');
+                    sidebarLeft.scrollTop = initialPosition;
+                }
+            }
+        </script>
 
-                            sidebarLeft.scrollTop = initialPosition;
-                        }
-                    }
-                </script>
+    </div>
 
-            </div>
-
-        </aside>
-        <!-- end: sidebar -->
+</aside>
+<!-- end: sidebar -->
